testdata/typechecker/error/BinopTest-err10.java
int main() {
            boolean b;
            b = 67 && true; // TE
		return 0;
}

